--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Dog Adoption</title>
 	<link rel="stylesheet" href="styles.css"> <!-- Link to an external CSS file -->
+    <script defer type="module" src=""></script>
 </head>
 <body>
 	<header>
