--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Dog Adoption</title>
 	<link rel="stylesheet" href="styles.css"> <!-- Link to an external CSS file -->
-    <script defer type="module" src=""></script>
+    <script defer src="src/index.js"></script>
 </head>
 <body>
 	<header>
@@ -41,7 +41,5 @@
 	<footer>
     	<p>&copy; 2024 Dog Adoption. All rights reserved.</p>
 	</footer>
- 
-	<script src="scripts.js"></script> <!-- Link to an external JS file -->
 </body>
 </html>
