--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 	<title>Dog Adoption</title>
 	<link rel="stylesheet" href="style.css">
 	<script defer src="src/index.js"></script>
-</head>
-
-<body>
-
+    </head>
 	<header>
 		<h1>Welcome to Dog Adoption</h1>
 		<nav>
@@ -62,14 +59,14 @@
 					</option>
 				</select>
 				<input type="submit" value="Continue Adoption">
+				<div id='heartContainer' class=".heart"></div>
 
 			</form>
 			<p id="message" class="hidden">Thank you for your time,If you have any questions, please contact us at <a
 					href="mailto:info@dogadoption.com">info@dogadoption.com</p>
 
-
-
 			</div>
+
 
 		</section>
 
@@ -77,6 +74,8 @@
 			<h2>Contact Us</h2>
 			<p></a>.</p>
 		</section>
+	
+
 	</main>
 
 	<footer>
